--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/joachimdalen/notes-combiner#readme",
   "dependencies": {
     "markdown-pdf": "^9.0.0",
+    "remarkable-katex": "^1.0.1",
     "through": "^2.3.8"
   }
 }
