Convert to CoffeeScript

--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Combine markdown notes in directory to single PDF file.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "compile": "./node_modules/coffeescript/bin/coffee --transpile --map --output lib/ --compile src/",
+    "watch": "./node_modules/coffeescript/bin/coffee --transpile --map --watch --output lib/ --compile src/",
+    "export": "npm run compile && node ./lib/index.js"
+
   },
   "repository": {
     "type": "git",
@@ -20,5 +23,10 @@
     "markdown-pdf": "^9.0.0",
     "remarkable-katex": "^1.0.1",
     "through": "^2.3.8"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.3.3",
+    "@babel/preset-env": "^7.3.1",
+    "coffeescript": "^2.3.2"
   }
 }
